# scribe-lite

./: .envrc  .gitignore  README.md  brunch-config.js  elm-package.json  index.html  mix.exs  package.json  webpack.config.js  yarn
api/: .env  Cargo.toml  Makefile  diesel.toml
api/config/: config.exs  prod.exs  prod.secret.exs
api/lib/: scribe_web.ex
api/lib/scribe_web/: gettext.ex  router.ex
api/lib/scribe_web/views/: error_helpers.ex  layout_view.ex
api/migrations/2018-12-30-162500_create_stories/: up.sql
api/migrations/2019-01-06-034517_create_lines/: up.sql
api/migrations/2019-03-06-134100_add_queue_to_stories/: down.sql  up.sql
api/migrations/2019-03-09-215725_rename_queue_to_author_ids/: down.sql  up.sql
api/migrations/2019-03-26-035659_replace_author_ids_with_json_queue/: down.sql  up.sql
api/migrations/2019-04-08-124815_make_queue_not_null/: down.sql  up.sql
api/migrations/2019-05-29-162533_make_queue_jsonb/: down.sql  up.sql
api/priv/repo/: seeds.exs
api/priv/static/css/: app.css
api/src/: action.rs  main.rs  syntax.rs
api/src/action/: action.rs  event.rs  mod.rs  routes.rs  sink.rs
api/src/actions/: mod.rs  routes.rs
api/src/core/: action.rs  empty.rs  errors.rs  id.rs  logger.rs  mod.rs  sink.rs
api/src/domain/: id.rs  mod.rs
api/src/socket/: event.rs  listen.rs  message.rs  mod.rs  socket.rs
api/src/story/: add_line.rs  join.rs  mod.rs
api/test/channels/: story_channel_test.exs
api/test/controllers/: page_controller_test.exs
api/test/support/: model_case.ex
api/test/views/: layout_view_test.exs
(+770 files in other folders)
