[package]
name    = "api"
version = "0.1.0"
authors = ["Ty Cobb <ty.cobb.m@gmail.com>"]

[dependencies]
dotenv       = "0.13.0"
rocket       = "0.4.0-rc.1"
ws           = "0.7.9"
serde        = "1.0.82"
serde_derive = "1.0.82"

[dependencies.serde_json]
version  = "1.0.33"
features = ["raw_value"]

[dependencies.diesel]
version  = "1.3.3"
features = ["postgres"]
