[package]
name    = "api"
version = "0.1.0"
authors = ["Ty Cobb <ty.cobb.m@gmail.com>"]

[dependencies]
chrono       = "0.4.6"
dotenv       = "0.13.0"
env_logger   = "0.6.0"
log          = "0.4.0"
rocket       = "0.4.0"
serde        = "1.0.85"
serde_derive = "1.0.85"
ws           = "0.7.9"
yansi        = "0.5.0"

[dependencies.serde_json]
version  = "1.0.36"
features = ["raw_value"]

[dependencies.diesel]
version  = "1.3.3"
features = ["postgres", "chrono"]
